SERVER-15634 Delete Status objects in ClientConnections::clearPool